# scsp-rpid-wasm

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: static.yml
pkg/: README.md  THIRD_PARTY_LICENSES.html  index.html  package.json  scsp_rpid_wasm.d.ts  scsp_rpid_wasm.js  scsp_rpid_wasm_bg.wasm  scsp_rpid_wasm_bg.wasm.d.ts
src/: lib.rs  model.rs  scsp.rs
