[package]
name = "scsp-rpid-wasm"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/espeon011/scsp-rpid-wasm"
description = "SCSP を RPID で定式化して解く"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.118"
rpid = { git = "https://github.com/espeon011/rpid.git", rev = "c0049c997ff14e47a9bac2ddf01a493ab373b710" }
